--- a/css-exercises/foundations/flex/02-flex-header/styles.css
+++ b/css-exercises/foundations/flex/02-flex-header/styles.css
@@ -1,9 +1,10 @@
 .header  {
   font-family: monospace;
-  background: papayawhip;
+  background: rgb(231, 189, 126);
 }
 
 .logo {
+  
   font-size: 48px;
   font-weight: 900;
   color: tomato;
@@ -22,4 +23,18 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+}
+
+.header {
+  padding: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+ul {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  gap: 8px;
 }
