--- a/css-exercises/foundations/flex/03-flex-header-2/styles.css
+++ b/css-exercises/foundations/flex/03-flex-header-2/styles.css
@@ -46,3 +46,24 @@ a {
 ul {
   list-style-type: none;
 }
+
+/* SOLUTION */
+
+.header {
+  display: flex;
+  padding: 8px;
+  justify-content: space-between;
+}
+
+ul {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  gap: 16px;
+}
+
+.left, .right {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
