--- a/css-exercises/foundations/flex/06-flex-layout/styles.css
+++ b/css-exercises/foundations/flex/06-flex-layout/styles.css
@@ -24,3 +24,61 @@ input {
   padding: 8px 24px;
   width: 400px;
 }
+
+/* SOLUTION */
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+  color: rgba(92, 89, 89, 0.99)
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between:
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  flex-shrink: 0;
+  padding: 8px;
+
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+  flex-grow: 1;
+  justify-content: center;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  background: rgba(237, 232, 232, 0.67);
+  flex-shrink: 0;
+  padding: 8px;
+}
+
+.left-links {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  gap: 8px;
+}
+
+.right-links {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  gap: 8px;
+}
